<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
	android:background="@color/expanlist" >

	<!-- Framelayout to display Fragments -->
	<FrameLayout
		android:id="@+id/frame_about"
		android:layout_width="match_parent"
		android:layout_height="match_parent" >

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical">

	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:orientation="vertical" >
	        
	        <ImageView
		        android:id="@+id/ictentang"
		        android:layout_width="144dp"
		        android:layout_height="144dp"
		        android:layout_gravity="center"
		        android:layout_margin="30dp"
		        android:layout_weight="0.09"
		        android:src="@drawable/ic_launcher" />
	        
	    </LinearLayout>
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
			android:gravity="bottom"
	        android:orientation="vertical" >
	        
	        <TextView 
	            android:id="@+id/txttentang"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:paddingTop="30dp"
	            android:paddingLeft="20dp"
	            android:paddingRight="20dp"
				android:paddingBottom="15dp"
	            android:gravity="center"
	            android:text="@string/tentang"
	            android:textSize="15sp"
	            android:lineSpacingMultiplier="1.2"
	            android:textColor="#000" />

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:paddingBottom="15dp"
				android:paddingTop="15dp" >

				<TextView
					android:id="@+id/appname"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:text="@string/app_name"
					android:textSize="15sp"
					android:textColor="#000" />

				<TextView
					android:id="@+id/txtversi"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:textSize="15sp"
					android:textColor="#000" />

				<TextView
					android:id="@+id/develop"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:text="@string/develpoment"
					android:textSize="15sp"
					android:textColor="#000" />

				<TextView
					android:id="@+id/upload"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:text="@string/uploaded"
					android:textSize="14sp"
					android:textColor="#000" />

			</LinearLayout>

	        <TextView 
	            android:id="@+id/txtpengembang"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:paddingTop="15dp"
				android:paddingBottom="30dp"
	            android:gravity="center"
	            android:text="@string/pengembang"
	            android:textSize="15sp"
	            android:textColor="#000" />

	    </LinearLayout>

		</LinearLayout>

	</FrameLayout>

</ScrollView>
